# misis2023f-22-04-akperov-e-b

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
docs/: CMake подключение пакетов (FetchContent).md  report.md
prj.codeforces/: 0020b.cpp  0021b.cpp  0023a.cpp  0039h.cpp  0112b.cpp  0197b.cpp  0348a.cpp  0549c.cpp  0569a.cpp  0617b.cpp  1208a.cpp  1359d.cpp  1373c.cpp  1772e.cpp  1872d.cpp  1879a.cpp  1903a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  nothing.txt  poromarker.cpp
prj.cw/libs/: CMakeLists.txt
