add_executable (0020b "0020b.cpp")
add_executable (0197b "0197b.cpp")
add_executable (0549c "0549c.cpp")
add_executable (0569a "0569a.cpp")
add_executable (1208a "1208a.cpp")
add_executable (1359d "1359d.cpp")
add_executable (1772e "1772e.cpp")
add_executable (1872d "1872d.cpp")
add_executable (1879a "1879a.cpp")
add_executable (1373c "1373c.cpp")
add_executable (0023a "0023a.cpp")
add_executable (0021b "0021b.cpp")
add_executable (0039h "0039h.cpp")
add_executable (1903a "1903a.cpp")